[metadata]
name = story-engine-api
version = 1.0.0
url = https://github.com/cedwards036/story-engine-api
license = MIT
maintainer = Christopher Edwards
maintainer_email = cedwards036@gmail.com
description = A REST API that serves up random Story Engine cues
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
install_requires = Flask

[options.extras_require]
test = pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = story_engine_api